Add mobile layout

--- a/index.html
+++ b/index.html
@@ -22,31 +22,33 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <div class="card">
-      <img src="./images/image-equilibrium.jpg" alt="" class="card__image" />
-      <div class="card__info">
-        <a href="#" class="card__title">Equilibrium #3429</a>
-        <span class="card__desc"
-          >Our Equilibrium collection promotes balance and calm.</span
-        >
-        <div class="card__flex">
-          <strong class="card__price"
-            ><img src="./images/icon-ethereum.svg" alt="" /> 0.041 ETH</strong
+    <main class="main-container">
+      <div class="card">
+        <img src="./images/image-equilibrium.jpg" alt="" class="card__image" />
+        <div class="card__info">
+          <a href="#" class="card__title">Equilibrium #3429</a>
+          <span class="card__desc"
+            >Our Equilibrium collection promotes balance and calm.</span
           >
-          <span class="card__date"
-            ><img src="./images/icon-clock.svg" alt="" /> 3 days left</span
-          >
+          <div class="card__flex">
+            <strong class="card__price"
+              ><img src="./images/icon-ethereum.svg" alt="" /> 0.041 ETH</strong
+            >
+            <span class="card__date"
+              ><img src="./images/icon-clock.svg" alt="" /> 3 days left</span
+            >
+          </div>
+        </div>
+        <div class="card__footer">
+          <span class="card__author">
+            <img src="./images/image-avatar.png" class="card__avatar" alt="" />
+            <span>Creation of</span>
+            &nbsp;
+            <a href="#" class="card__author-name">Jules Wyvern</a>
+          </span>
         </div>
       </div>
-      <div class="card__footer">
-        <span class="card__author">
-          <img src="./images/image-avatar.png" class="card__avatar" alt="" />
-          <span>Creation of</span>
-          &nbsp;
-          <a href="#" class="card__author-name">Jules Wyvern</a>
-        </span>
-      </div>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by
