--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Rizky Meiputra Nugraha</a>.
+      >. Coded by
+      <a href="https://github.com/rizkymeiputra">Rizky Meiputra Nugraha</a>.
     </div>
   </body>
 </html>
